--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "projetoiot-mobile",
-    "slug": "projetoiot-mobile",
+    "name": "projetoiot-mobile-2",
+    "slug": "projetoiot-mobile-2",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -21,10 +21,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.joaovictornsv.projetoiotmobile2"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "f77f29e9-e918-4d42-b46e-bcffe1e44201"
+      }
     }
   }
 }
